<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="4dip"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="4dip"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	    <TextView
		    android:id="@+id/text_about_version"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical|center_horizontal"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="@string/c_version"
		    />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/versionName"/>
    </LinearLayout>
    <LinearLayout
        android:padding="4dip"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/c_build"/>
	    <TextView
	        android:id="@+id/text_about_build"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/buildNumber"/>
    </LinearLayout>
</LinearLayout>    