<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
	    
	<ScrollView 
		android:id="@+id/scroller"
		android:layout_marginTop="16dip"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/popup"
    	android:fadingEdgeLength="5dip"
    	android:scrollbars="none">
        
    	<LinearLayout
	    	android:id="@+id/tracks"
	    	android:orientation="vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dip">
		    <LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:background="@drawable/action_item_btn">
				<TextView 
			       android:id="@+id/button_control_ptz"
			       android:text="@string/ptz"
			       style="@style/ToolbarButton2"
			       android:drawableTop="@drawable/selector_button_ptz"
		   		/>
				<TextView 
			       android:id="@+id/button_control_relay"
			       android:text="@string/relay"
			       style="@style/ToolbarButton2"
			       android:drawableTop="@drawable/selector_button_relay"
		   		/>
				<TextView 
			       android:id="@+id/button_control_zoom"
			       android:text="@string/zoom"
			       style="@style/ToolbarButton2"
			       android:drawableTop="@drawable/selector_button_zoom"
		   		/>
				<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView 
                       android:id="@+id/button_control_notify"
                       android:text="@string/notify"
                       style="@style/ToolbarButton2"
                       android:drawableTop="@drawable/selector_button_notifyon"
                       android:visibility="gone" />
                    <TextView 
                       android:id="@+id/button_control_unnotify"
                       android:text="@string/unnotify"
                       style="@style/ToolbarButton2"
                       android:drawableTop="@drawable/selector_button_notifyoff"
                       android:visibility="gone" />

                </RelativeLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView >
 	
 	<ImageView
        android:id="@+id/arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_up" />
        
 	<ImageView
        android:id="@+id/arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_below="@id/scroller"
      	android:layout_marginTop="-4dip"
        android:src="@drawable/arrow_down" />

</RelativeLayout>