<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"	
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

	<ScrollView android:id="@+id/scroller"
		android:layout_marginTop="16dip"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/popup"
    	android:fadingEdgeLength="5dip"
    	android:scrollbars="none">
        
    	<LinearLayout android:id="@+id/tracks"
	    	android:orientation="vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:padding="10dip">
		    <LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:clickable="true"
				android:focusable="true"
				android:background="@drawable/action_item_btn">
				<TextView android:id="@+id/division_1x1"
			       android:text="@string/_1x1"
			       style="@style/ToolbarButton2"
			       android:drawableTop="@drawable/selector_button_1x1"/>
				<TextView android:id="@+id/division_2x2"
			       android:text="@string/_2x2"
			       style="@style/ToolbarButton2"
			       android:drawableTop="@drawable/selector_button_2x2"/>
				<TextView android:id="@+id/division_3x3"
			       android:text="@string/_3x3"
			       style="@style/ToolbarButton2"
			       android:drawableTop="@drawable/selector_button_3x3"/>
				<TextView android:id="@+id/division_4x4"
			       android:text="@string/_4x4"
			       style="@style/ToolbarButton2"
			       android:drawableTop="@drawable/selector_button_4x4"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView >
 	
 	<ImageView android:id="@+id/arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_up" />
        
 	<ImageView android:id="@+id/arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_below="@id/scroller"
      	android:layout_marginTop="-4dip"
        android:src="@drawable/arrow_down" />

</RelativeLayout>