<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView android:id="@+id/scroller" 
        android:layout_marginTop="16dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popup"
        android:fadingEdgeLength="5dip"
        android:scrollbars="none">
        
        <LinearLayout android:id="@+id/tracks"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dip">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/action_item_btn">
                <TextView android:id="@+id/relay_1sec"
                   android:text="@string/_1sec"
                   style="@style/ToolbarButton2"
                   android:drawableTop="@drawable/selector_button_1sec" />
                <TextView android:id="@+id/relay_3sec"    
                   android:text="@string/_3sec"
                   style="@style/ToolbarButton2"
                   android:drawableTop="@drawable/selector_button_3sec" />
                <TextView android:id="@+id/relay_5sec"      
                   android:text="@string/_5sec"
                   style="@style/ToolbarButton2"
                   android:drawableTop="@drawable/selector_button_5sec" />
                <TextView android:id="@+id/relay_8sec" 
                   android:text="@string/_8sec"
                   style="@style/ToolbarButton2"
                   android:drawableTop="@drawable/selector_button_8sec" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView >
    
    <ImageView android:id="@+id/arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_up" />
        
    <ImageView android:id="@+id/arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroller"
        android:layout_marginTop="-4dip"
        android:src="@drawable/arrow_down" />

</RelativeLayout>